fixed footer spacing on lesson desktop view

--- a/styles/lessons.css
+++ b/styles/lessons.css
@@ -67,11 +67,9 @@
         width: 400px;
     }
   
-    .contact-bottom-words{
-        margin-top: -90px;
-    }
     .footer{
-        padding-top: 200px;
+      margin-top: -50px;
+      padding-bottom: 10px;
         margin-left: 35px;
     }
 
